Udugsma Bill Item Report Add Search by item,cateory,income department Salary Generate  only Analysed Staff Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/resources/css/maincss.css
+++ b/src/main/webapp/resources/css/maincss.css
@@ -648,6 +648,10 @@ body {
     color: green;
 }
 
+.blueText{    
+    color: blue;
+}
+
 .noBackround{
     background: white   !important ;
     background-color: red !important ;
