--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -7,6 +7,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:poue="http://primefaces.org/ui/extensions">
     <h:head>
+        <script src="https://www.gstatic.com/charts/loader.js" type="text/javascript"></script>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <ui:insert name="title"   >
             <title>
@@ -839,6 +840,7 @@
                 <p:panel rendered ="#{sessionController.logged and sessionController.department eq null}" 
                          styleClass="verticalAndHorizontalCentering">
                     <h:form id="formDept" >
+                        
                         <p:panel header="Select Department" >
                             <h:panelGrid columns="3" >
                                 <h:outputText value="Department" ></h:outputText>
