add dashboard to system Signed-off-by: arunawijesinghe <acswijesinghe91@gmail.com>

--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -8,6 +8,7 @@
       xmlns:poue="http://primefaces.org/ui/extensions">
     <h:head>
         <script src="https://www.gstatic.com/charts/loader.js" type="text/javascript"></script>
+        <!--<script src="resources/js/snowstorm.js" type="text/javascript"></script>-->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <ui:insert name="title"   >
             <title>
