--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -7,7 +7,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:poue="http://primefaces.org/ui/extensions">
     <h:head>
-        <script src="https://www.gstatic.com/charts/loader.js" type="text/javascript"></script>
+        <!--<script src="https://www.gstatic.com/charts/loader.js" type="text/javascript"></script>-->
 
         <!--<script src="resources/js/snowstorm.js" type="text/javascript"></script>-->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
