Ruhunu After 2017 05 23 Update issue 1 - 20 Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/resources/css/maincss.css
+++ b/src/main/webapp/resources/css/maincss.css
@@ -891,6 +891,10 @@ body {
     width : 100px!important;
 }
 
+.shortinput2 .ui-autocomplete-input.ui-inputfield { 
+    width : 200px!important;
+}
+
 .standardList{
     height: 300px;
     width: 300px!important;
