--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -159,7 +159,7 @@
                                     <p:submenu label="Inward Billing" rendered="#{webUserController.hasPrivilege('LabInwardBilling')}">
                                         <p:menuitem ajax="false" action="/inward/inward_bill_service" value="Bill" actionListener="#{billBhtController.makeNull}" rendered="#{webUserController.hasPrivilege('LabInwardBilling')}" ></p:menuitem>                                            
                                         <p:menuitem ajax="false" action="/inward/inward_bill_service" value="Add Inward Services" actionListener="#{billBhtController.makeNull}" rendered="#{!webUserController.hasPrivilege('InwardServicesAndItemsAddServices')}" ></p:menuitem>
-                                        <p:menuitem ajax="false" action="/lab/lab_inward_search_service" value="Search Bills" actionListener="#{searchController.makeListNull}"  rendered="#{webUserController.hasPrivilege('LabInwardSearchServiceBill')}" ></p:menuitem>  
+                                        <p:menuitem ajax="false" action="/lab/inward_search_service" value="Search Bills" actionListener="#{searchController.makeListNull}"  rendered="#{webUserController.hasPrivilege('LabInwardSearchServiceBill')}" ></p:menuitem>  
                                     </p:submenu>
                                     <p:submenu label="Collecting Centre Billing" rendered="#{webUserController.hasPrivilege('LabCollectingCentreBilling')}">
                                         <p:menuitem ajax="false" action="/collecting_centre/bill"  
@@ -184,7 +184,7 @@
                                     <p:menuitem ajax="false" action="/lab_search_for_reporting_ondemand_institution" value="Reports/Search By Logged Institution" rendered="#{webUserController.hasPrivilege('LabReportSearchByLoggedInstitution')}" ></p:menuitem>
                                     <p:menuitem ajax="false" action="/lab/search_reports" value="Reporting" rendered="#{webUserController.hasPrivilege('LabReporting')}" ></p:menuitem>
                                     <p:menuitem ajax="false" action="/reportLab/lab_summeries_index" value="Summeries"  rendered="#{webUserController.hasPrivilege('LabSummeries')}" ></p:menuitem>
-                                    <p:menuitem ajax="false" action="/lab_administration" value="Administration" rendered="#{webUserController.hasPrivilege('LabAdiministrator')}"  ></p:menuitem>
+                                    <p:menuitem ajax="false" action="/lab/administration" value="Administration" rendered="#{webUserController.hasPrivilege('LabAdiministrator')}"  ></p:menuitem>
                                 </p:submenu>
 
                                 <p:submenu styleClass="rightBordrOnly" label="Pharmacy"  rendered="#{webUserController.hasPrivilege('Pharmacy')}">
@@ -635,7 +635,7 @@
 
                                     <p:submenu label="Book Issuing" rendered="#{webUserController.hasPrivilege('Payment')}">
                                         <p:submenu label="Collecting Centre Book Issuing">
-                                            <p:menuitem  ajax="false"  action="/lab/lab_agent_referece_book" value="Add Lab Book to Collecting Centre"  ></p:menuitem>
+                                            <p:menuitem  ajax="false"  action="/lab/agent_referece_book" value="Add Lab Book to Collecting Centre"  ></p:menuitem>
                                             <p:menuitem  ajax="false"  action="/reportLab/lab_report_collecting_center_referece_book" value="Collecting Centre Book Report"  ></p:menuitem>
                                             <p:menuitem  ajax="false"  action="/lab/institutions_udate_credit_limit" value="Collecting Centre Credit Limit Update"  ></p:menuitem>
                                             <p:menuitem  ajax="false"  action="/reportLab/collecting_centre_report_agent_history" value="Collecting Centre History"  ></p:menuitem>
@@ -720,7 +720,7 @@
                                     <p:menuitem  ajax="false"  action="/admin_manage_users" value="Manage Users" rendered="#{webUserController.hasPrivilege('AdminManagingUsers')}" ></p:menuitem>
                                     <p:menuitem  ajax="false"  action="/admin_mange_institutions_index" value="Manage Institutions" rendered="#{webUserController.hasPrivilege('AdminInstitutions')}" ></p:menuitem>
                                     <p:menuitem  ajax="false"  action="/admin_manage_staff_index" value="Manage Staff" rendered="#{webUserController.hasPrivilege('AdminStaff')}" ></p:menuitem>
-                                    <p:menuitem  ajax="false"  action="/admin_items" value="Manage Items/Services" rendered="#{webUserController.hasPrivilege('AdminItems')}" ></p:menuitem>
+                                    <p:menuitem  ajax="false"  action="/admin_items" value="Manage Items &amp; Services" rendered="#{webUserController.hasPrivilege('AdminItems')}" ></p:menuitem>
                                     <p:menuitem  ajax="false"  action="/admin_fees" value="Manage Prices/Charges/Packages" rendered="#{webUserController.hasPrivilege('AdminPrices')}" ></p:menuitem>
                                     <p:submenu label="Discount" rendered="#{webUserController.hasPrivilege('MemberShip')}" >
                                         <p:submenu label="Membership Sheme">
@@ -884,7 +884,7 @@
                     </h:form>
                 </p:panel>
 
-                <h:panelGroup rendered ="#{!sessionController.logged}"  >
+                <h:panelGroup rendered ="#{!sessionController.logged and !sessionController.firstLogin}"  >
                     <ui:insert name="login"   >
                         <p:panel header="Please login" id="loginbox" style="text-align: center; " styleClass="nonPrintBlock verticalAndHorizontalCentering">
                             <h:panelGrid columns="2" >
